# pos-dlib

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  Dockerfile  README.md  buidler.config.ts  config-template.yaml  dispatcher-entrypoint.sh  docker-compose-goerli.yml  docker-compose-localhost.yml  docker-compose-test.yml  docker-compose.yml  foundry.toml  hardhat.config.ts  instantiate_lottery.js  package-lock.json  package.json  slither.config.json  tsconfig.json
abi/: bsc_testnet.json  goerli.json  kovan.json  matic_testnet.json  rinkeby.json  ropsten.json
artifacts/: CTSIFaucet.json  CartesiMath.json  Decorated.json  Instantiator.json  InstantiatorImpl.json  Lottery.json  Ownable.json  PoS.json  PrizeManager.json  SafeMath.json  Staking.json  StakingImpl.json  WorkerAuthManager.json
contracts/: BlockSelector.sol  BlockSelectorV2.sol  CTSIFaucet.sol  HistoricalDataImpl.sol  IHistoricalData.sol  IPoS.sol  IPoSV2.sol  IRewardManager.sol  IRewardManagerV2.sol  IStaking.sol  IWorkerManagerAuthManager.sol  Lottery.sol  PoS.sol  PoSPrototype.sol  PoSV2FactoryImpl.sol  PoSV2Impl.sol  PrizeManager.sol  RewardManager.sol  RewardManagerV2Impl.sol  Staking.sol  StakingImpl.sol  StakingInterface.sol
deploy/: 01_staking.ts  02_blockSelector.ts  02_lottery.ts  03_pos.ts  04_librariesV2.ts  04_pos.ts  04_prizeManager.ts  04_rewardManager.ts  05_ctsi_faucet.ts  05_posV2Factory.ts
migrations/: 2_deploy_lottery.js
pos/: Cargo.toml  Cargo_cache.toml
pos/src/: lib.rs  lottery.rs  main.rs  pos.rs  pos_prototype.rs
scripts/: approve_staking_spending.ts  (+13 more)
(+187 files in other folders)
