[package]
description = "Cartesi Proof of Stake"
homepage = "https://cartesi.io"
name = "pos_prototype"
version = "0.1.0"
authors = ["Cartesi Team"]

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../dispatcher/error" }
transaction = { path = "../dispatcher/transaction" }
configuration = { path = "../dispatcher/configuration" }
utils = { path = "../dispatcher/utils" }
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../dispatcher/state" }
dispatcher = { path = "../dispatcher/dispatcher" }
protobuf = "2"
rust-crypto = "0.2.36"
hex = "0.4.0"
